<resources>
    <string name="app_name">FadFlicks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="pref_sort_order">Sort Order</string>
    <string name="pref_sort_popularity" translateable="false">Popularity</string>
    <string name="pref_sort_highest_rated" translateable="false">Highest Rated</string>
    <string name="pref_sort_default_value" translateable="false">popularity.desc</string>
    <string name="pref_refresh" translateable="false">Refresh</string>

    <string name="alert_title_text">Data Unavailable</string>
    <string name="alert_data_settings_btn" >Data Settings</string>
    <string name="alert_wifi_settings_btn" >Wifi Settings</string>
    <string name="alert_cancel_btn" >Cancel</string>
    <string name="alert_msg">We did not detect a Data Connection.
                                Would you like to visit your Data Settings to check ?</string>

    <string name="no_data_detected_msg">Oh! No... We did did not detect a Data Connection :( </string>

    <string name="data_unavailable_msg">Data Unavailable</string>

    <string name="detail_title">Detail Title</string>
    <string name="detail_overview">Summary</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_flick_detail">FlickDetailActivity</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!-- Add TMDB API key below-->
    <string name="api_key"></string>


</resources>
