<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FadFlicksFragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/alert_title"
        android:text="@string/alert_title_text"
        style="@style/NormalTextStyle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingLeft="5dp"
        android:background="@color/activity_background_color"
        android:gravity="center_vertical"
        />
    <TextView
        android:layout_below="@+id/alert_title"
        android:id="@+id/alert_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/alert_msg"
        android:lines="2"/>
    <Button
        android:layout_below="@+id/alert_msg"
        android:text="@string/alert_data_settings_btn"
        android:id="@+id/btn_alert_data_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>
    <Button
        android:layout_below="@+id/btn_alert_data_settings"
        android:text="@string/alert_wifi_settings_btn"
        android:id="@+id/btn_alert_wifi_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"/>

    <Button
        android:layout_below="@+id/btn_alert_wifi_settings"
        android:text="@string/alert_cancel_btn"
        android:id="@+id/btn_alert_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"/>


</RelativeLayout>
